vlib/v/checker/tests/string_char_null_err.vv
fn main() {
    println('Null character: \0')
}
